# Light_RAG

./: README.md  pyproject.toml  requirements-local.txt  requirements.txt
rag/: __init__.py  __main__.py  chunking.py  config.py  embeddings.py  pipeline.py  qdrant_store.py  tokenizers.py
text/: odyssey.txt
