[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "light-rag"
version = "0.1.0"
description = "Light RAG with Qdrant vector store"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.24",
    "qdrant-client>=1.11",
    "python-dotenv>=1.0",
    "sentence-transformers>=2.6",
    "torch>=2.1",
    "transformers>=4.40",
    "openai>=1.40",
    "tiktoken>=0.7",
]

[tool.setuptools.packages.find]
include = ["rag*"]
